Added bug reporting info.

--- a/themes/nwntools/layouts/page/dragoncode.html
+++ b/themes/nwntools/layouts/page/dragoncode.html
@@ -9,7 +9,7 @@
               <center><img class="is-centered" src="/img/dragoncode.jpg"></img></center>
               <br>
               <p>This secret code system has slowly started circulating in the Lands of Mists among groups that see its value for keeping themselves and theirs safe, covering nefarious activities or sharing secrets that threaten those in power. If used correctly, its promise is to make it impossible to decipher one's communications without infiltrating or influencing the people involved.</p>
-              <p>While the code is easy to teach to those of average intelligence, it can be boring OOCly to do by hand. Let this tool do all the heavy lifting instead.</p>
+              <p>While the code is easy to teach to those of average intelligence, it can be boring OOCly to do by hand. Let this tool do all the heavy lifting instead. To report bugs or suggest features, you can do so <a class="rl-link" href="https://github.com/nwntools/nwntools/issues">here</a>.</p>
               <h4>Encrypting</h4>
               <p>Put the message, key phrase and one time key into the appropriate fields. If it's not the first message used for this one time key, also input the last coded message, its "^...^" label or simply where it should start being coded in the one time key. Then click "Encrypt".</p>
               <h4>Decrypting</h4>
