Improved IC instructions.

--- a/themes/nwntools/assets/sass/main.sass
+++ b/themes/nwntools/assets/sass/main.sass
@@ -37,3 +37,10 @@
 
 .rl-link
   color: #f23535
+
+.rl-parchment-backdrop
+  background-image: url("/img/parchment.jpg")
+  background-repeat: repeat
+
+.black-text-color, .black-text-color > *
+  color: #000000 !important
