Added set up instructions.

--- a/themes/nwntools/layouts/page/dragoncode.html
+++ b/themes/nwntools/layouts/page/dragoncode.html
@@ -205,4 +205,46 @@
       </div>
     </div>
   </section>
+  <section class="section rl-backdrop has-text-centered">
+    <div class="container">
+      <h1 class="title rl-text-color">
+        Set up
+      </h1>
+    </div>
+  </section>
+  <section class="section rl-backdrop">
+    <div class="container">
+      <div class="columns is-centered">
+        <div class="column is-half">
+          <div class="box rl-background">
+            <div class="content rl-text-color">
+              <p>To start coded messaging with a new person, one must:</p>
+              <ol>
+                <li>Share a new Key Phrase (Memorized) IG.</li>
+                <li>Share a new One Time Key IG. OOC message the key for easy copy pasting.</li>
+                <li>Decide on a spot to leave Coded Messages IG. OOC decide where to post them online for persistence and easy copy pasting.</li>
+                <li>Share an instructional parchment with the code wheel. Generate it below to write.</li>
+              </ol>
+            </div>
+            <div class="field">
+              <label class="label rl-text-color">Instructions to write in game</label>
+              <div class="control">
+                <textarea id="instructions" class="textarea rl-input" placeholder="Output" rows="12" readonly></textarea>
+              </div>
+            </div>
+            <div class="field">
+              <div class="control">
+                <button class="button" onclick="make_instructions()">
+                  <span class="icon">
+                    <i class="fas fa-map"></i>
+                  </span>
+                  <span>Make Instructions</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {{ end }}
